--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -157,6 +157,8 @@ footer {
 /* ----- Segunda Sección -Index ----- */
 
 #segunda-seccion {
+  margin-top: 20vh;
+
   figcaption {
     text-align: center;
     font-weight: bold;
@@ -248,7 +250,7 @@ footer {
     select,
     textarea {
       width: 100%;
-      background-color: #ffffff;
+      background-color: $color-white;
       border: solid 2px #c3c3c3;
       border-radius: 3px;
       padding-left: 1.25rem;
@@ -311,17 +313,25 @@ footer {
       margin-left: 10px;
     }
 
-    ul li a {
-      text-decoration: none;
-      color: #000000;
-      font-weight: bold;
-      display: block;
-      text-align: center;
-      padding: 0.625rem 0;
+    ul {
+      li {
+        a {
+          text-decoration: none;
+          color: #000000;
+          font-weight: bold;
+          display: block;
+          text-align: center;
+          padding: 0.625rem 0;
+
+          &:active {
+            color: $color-primary;
+          }
+        }
+      }
     }
 
     .navbar-toggler {
-      background-color: #00ab7c;
+      background-color: $color-primary;
       position: absolute;
       right: 10px;
       top: 20px;
@@ -439,11 +449,33 @@ footer {
 
   /* ----- Segunda Sección - Menú ----- */
   #segunda-seccion-menu {
-    div {
+    h2 {
+      padding-left: 2.5rem;
+    }
+    > div {
+      padding: 1.25rem;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      align-items: flex-start;
+      align-items: center;
+      gap: 1.25rem;
+
+      article {
+        border-bottom: solid 2px $color-primary;
+        padding-bottom: 1.25rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+
+        img {
+          width: 100%;
+        }
+
+        input {
+          align-self: flex-end;
+        }
+      }
     }
   }
 
@@ -695,6 +727,20 @@ footer {
     }
   }
 
+  footer {
+    ul {
+      li {
+        a {
+          font-weight: bold;
+
+          &:hover {
+            color: $color-primary;
+          }
+        }
+      }
+    }
+  }
+
   /* PÁGINA INDEX */
   /* -----Portada - Index----- */
   #portada {
@@ -826,6 +872,7 @@ footer {
   /* ----- Primer Sección - Menú ----- */
   #primer-seccion-menu {
     min-height: 80vh;
+    padding: 5rem 0;
 
     div {
       display: grid;
@@ -868,39 +915,53 @@ footer {
 
   /* ------ Segunda Sección - Menú ----- */
   #segunda-seccion-menu {
-    > div {
-      display: grid;
-      grid-template-rows: repeat(3, 1fr);
-      grid-template-columns: repeat(2, 1fr);
+    padding: 5rem 0;
 
-      div:nth-child(1) {
-        background-color: #00ab7c;
-        grid-row: 1 / 2;
-        grid-column: 1 /2;
+    h2 {
+      text-align: center;
+    }
+
+    div {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      gap: 2.5rem;
+
+      article {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+        border-radius: 0.625rem;
+        box-shadow: $sombra;
+        padding: 1.25rem 0;
+
+        input {
+          align-self: flex-end;
+          margin-right: 1.25rem;
+        }
       }
 
-      div:nth-child(2) {
-        background-color: red;
-        grid-row: 1 / 2;
-        grid-column: 2 /3;
-      }
+      article:nth-child(5) {
+        > div {
+          display: flex;
+          flex-direction: row;
 
-      div:nth-child(3) {
-        background-color: blueviolet;
-        grid-row: 2 / 3;
-        grid-column: 1 / 2;
-      }
+          figure {
+            flex: 1;
+          }
 
-      div:nth-child(4) {
-        background-color: pink;
-        grid-row: 2 / 3;
-        grid-column: 2 / 3;
-      }
+          div:nth-child(2) {
+            flex: 1;
+            display: flex;
+            flex-wrap: wrap;
 
-      div:nth-child(5) {
-        background-color: orangered;
-        grid-row: 3 / 4;
-        grid-column: 1 / 3;
+            h4 {
+              width: 100%;
+            }
+          }
+        }
       }
     }
   }
