--- a/css/estilos.css
+++ b/css/estilos.css
@@ -323,7 +323,7 @@ footer {
 /* ---------- PÁGINA BLOG ---------- */
 /* ----- Portada - Blog ------ */
 #portada-blog {
-  min-height: 60vh;
+  min-height: 50vh;
   padding: 1.25rem 0;
   background: url(../img/food-blog.png) no-repeat top right;
   background-size: contain;
@@ -335,17 +335,7 @@ footer {
     color: #000000;
     text-align: center; }
   #portada-blog > div {
-    height: 40vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; }
-    #portada-blog > div #redes-portada {
-      width: 50%;
-      display: flex;
-      justify-content: space-around; }
-      #portada-blog > div #redes-portada img {
-        max-width: 2.5rem; }
+    display: none; }
 
 /* ----- Primer Sección - Blog ----- */
 #primer-seccion-blog > h2 {
@@ -594,21 +584,9 @@ footer {
       justify-content: space-between; }
   /* ---------- PÁGINA BLOG ---------- */
   #portada-blog {
-    min-height: 90vh;
+    height: 100vh;
     background: url(../img/food-blog.png) no-repeat center top;
-    background-size: contain;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end; }
-    #portada-blog > div {
-      width: 50vw;
-      height: 25vh;
-      display: flex;
-      flex-direction: column; }
-    #portada-blog #redes-portada {
-      width: 50%;
-      display: flex;
-      justify-content: space-around; }
+    background-size: contain; }
   /* ----- Primer Sección - Blog ----- */
   #primer-seccion-blog > div {
     margin: 0 auto;
@@ -813,7 +791,11 @@ footer {
     align-items: center;
     padding-left: 4rem; }
     #portada-blog > div {
-      width: 40vw; }
+      display: flex;
+      flex-direction: column;
+      width: 50vw;
+      align-items: center;
+      text-align: center; }
   /* ----- Primer Sección - Blog ----- */
   #primer-seccion-blog {
     padding-bottom: 4rem; }
